--- a/ChatAPI/appsettings.json
+++ b/ChatAPI/appsettings.json
@@ -1,10 +1,14 @@
 {
+  "ConnectionStrings": {
+    "ChatDb": "Server=192.168.99.100; Database=ChatDb;User Id=sa;Password=HrTuDfLx46472444;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+
   },
   "AllowedHosts": "*"
 }
