--- a/ChatAPI/appsettings.json
+++ b/ChatAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ChatDb": "Server=192.168.99.100; Database=ChatDb;User Id=sa;Password=HrTuDfLx46472444;"
+    "ChatDb": "Server=localhost;Database=ChatDb;User Id=sa;Password=Pa55w0rd2019;"
   },
   "Logging": {
     "LogLevel": {
