prep db. Planning to recreate models

--- a/ChatAPI/Properties/launchSettings.json
+++ b/ChatAPI/Properties/launchSettings.json
@@ -11,7 +11,8 @@
   "profiles": {
     "IIS Express": {
       "commandName": "Project",
-      "launchUrl": "weatherforecast",
+      "launchBrowser": true,
+      "launchUrl": "api/test",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
