--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,12 +10,18 @@ services:
                 - "1433:1433"
       chatapi:
             environment:
-                - ASPNETCORE_ENVIRONMENT=Development
-                - ASPNETCORE_URLS=https://+:443;http://+:80
+                 - ASPNETCORE_ENVIRONMENT=Development
+
+
+            depends_on:
+                - chatdb
+
+            volumes:
+                - ${HOME}/.microsoft/usersecrets:/root/.microsoft/usersecrets
+                - ${HOME}/.aspnet/https:/root/.aspnet/https/
                 
             ports:
                 - "8000:80"
-            depends_on:
-                - chatdb
+            
 
       
