--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,6 @@ services:
         build:
             context: .
             dockerfile: ChatAPI/Dockerfile
+        environment:
+            - ASPNETCORE_ENVIRONMENT=Development
+
