--- a/ChatAPI/appsettings.json
+++ b/ChatAPI/appsettings.json
@@ -10,5 +10,10 @@
     }
 
   },
+  "Jwt": {
+    "Key": "godot_chat_backend_project_sample_key",
+    "Issuer": "goodot",
+    "Audience":  "sample_chat"
+  },
   "AllowedHosts": "*"
 }
